Done Home No Fix Menu 2

--- a/assets/scss/default.scss
+++ b/assets/scss/default.scss
@@ -22,6 +22,10 @@
         max-width: 1406px;
     }
 
+    &.container-1800 {
+        max-width: 1800px;
+    }
+
     &.container-1684 {
         max-width: 1684px;
     }
