--- a/assets/scss/components/stencil/navPages/_navPages.scss
+++ b/assets/scss/components/stencil/navPages/_navPages.scss
@@ -217,8 +217,7 @@
         }
     }
 
-    &:hover,
-    &.activePage {
+    &:hover {
         color: $navPage-subMenu-item--is-highlighted-color;
 
         svg {
