--- a/assets/scss/components/foundation/breadcrumbs/_breadcrumbs.scss
+++ b/assets/scss/components/foundation/breadcrumbs/_breadcrumbs.scss
@@ -16,9 +16,16 @@ ol.breadcrumbs {
     display: none; // 1
     font-size: 0; // 2
     overflow: visible;
-    text-align: center;
+    text-align: left;
     @include breakpoint("small") {
         display: block; // 1
+    }
+
+    margin-top: 22px;
+    margin-bottom: 0;
+    
+    @media (max-width: 767px) {
+        display: block !important;
     }
 }
 
@@ -26,21 +33,41 @@ ol.breadcrumbs {
     display: inline-block;
     float: none;
     margin-right: 0.25rem;
+    
+    > a {
+        color: #ff5100;
+        font-size: 13px;
+        letter-spacing: 0;
+        line-height: 1.538em;
+    }
 
     &.is-active {
         > .breadcrumb-label {
             cursor: pointer;
-            font-weight: 700;
+            font-weight: 400;
+            color: #ff5100;
+        }
+
+        &:hover {
+            > .breadcrumb-label {
+                color: #232323;
+            }
         }
     }
 
     // needs to override common bigcommerce styles for accessibility improvements
     &:not(:first-child)::before {
-        border-right: 0.1em solid $primary-color;
-        content: "";
+        content: ">";
         display: inline-block;
         height: 0.8em;
         margin: 0 0.25rem;
-        transform: rotate(15deg);
+        color: #000000;
+        font-size: 14px;
+    }
+
+    &:hover {
+        > a {
+            color: #232323;
+        }
     }
 }
