--- a/assets/scss/layouts/header/_header.scss
+++ b/assets/scss/layouts/header/_header.scss
@@ -467,6 +467,7 @@
                 display: flex;
                 justify-content: flex-end;
                 flex-wrap: wrap;
+                position: relative;
 
                 .navPages-item {
                     .navPages-action {
@@ -510,7 +511,7 @@
         /* CSS for Mega Menu */
         .navPages-item {
             &.has-megamenu {
-                position: relative;
+                position: static;
             }
 
             &:hover {
@@ -529,16 +530,12 @@
         }
         .navPage-subMenu {
             @media (min-width: 1025px) and (max-width: 1230px) {
-                max-width: 300% !important;
-                flex-direction: column;
-
-                .navPage-subMenu-list {
-                    margin-left: 0;
-                }
+                max-width: 100% !important;
+                
             }
             
             @media (min-width: $min-1025) {
-                width: 700%;
+                width: 100%;
                 max-width: 778px;
                 background-color: rgba($color: #000000, $alpha: 0.8);
                 position: absolute;
