--- a/templates/components/common/breadcrumbs.html
+++ b/templates/components/common/breadcrumbs.html
@@ -1,19 +1,21 @@
-<nav aria-label="Breadcrumb">
-    <ol class="breadcrumbs">
-        {{#unless theme_settings.hide_breadcrumbs }}
-            {{#each breadcrumbs}}
-                <li class="breadcrumb {{#if @last}}is-active{{/if}}">
-                    <a class="breadcrumb-label"
-                       href="{{url}}"
-                       {{#if @last}}aria-current="page"{{/if}}
-                    >
-                        <span>{{name}}</span>
-                    </a>
-                </li>
-            {{/each}}
-        {{/unless}}
-    </ol>
-</nav>
+<div class="container container-1684">
+    <nav aria-label="Breadcrumb">
+        <ol class="breadcrumbs">
+            {{#unless theme_settings.hide_breadcrumbs }}
+                {{#each breadcrumbs}}
+                    <li class="breadcrumb {{#if @last}}is-active{{/if}}">
+                        <a class="breadcrumb-label no-underline"
+                           href="{{url}}"
+                           {{#if @last}}aria-current="page"{{/if}}
+                        >
+                            <span>{{name}}</span>
+                        </a>
+                    </li>
+                {{/each}}
+            {{/unless}}
+        </ol>
+    </nav>
+</div>
 
 <script type="application/ld+json">
 {
