--- a/templates/components/common/navigation-menu.html
+++ b/templates/components/common/navigation-menu.html
@@ -16,9 +16,9 @@
         {{/if}}
         <ul class="navPages-list{{#if theme_settings.navigation_design '!==' 'simple'}} navPages-list-depth-max{{/if}}">
             {{#each categories}}
-                <li class="navPages-item custom-animation" data-step-animate="{{@index}}">
+                <li class="navPages-item">
                 {{#if ../theme_settings.navigation_design '===' 'simple'}}
-                    {{> components/common/navigation-list}}
+                    {{> components/common/navigation-list index=index}}
                 {{/if}}
                 {{#if ../theme_settings.navigation_design '===' 'alternate'}}
                     {{> components/common/navigation-list-alternate}}
