--- a/assets/scss/layouts/header/_header.scss
+++ b/assets/scss/layouts/header/_header.scss
@@ -527,6 +527,26 @@
                     display: none;
                 }
             }
+
+            > .navPages-action.has-subcategories {
+                @media (min-width: 1025px) {
+                    &:hover {
+                        &::before {
+                            content: "";
+                            position: absolute;
+                            top: 10px;
+                            left: 43%;
+                            border-style: solid;
+                            border-width: 20px 13px 20px 13px;
+                            border-color: transparent transparent rgba(0, 0, 0, 0.8) transparent;
+
+                            @media (min-width: 1800px) {
+                                top: 25px;
+                            }
+                        }
+                    }
+                }
+            }
         }
         .navPage-subMenu {
             @media (min-width: 1025px) and (max-width: 1230px) {
@@ -542,28 +562,20 @@
                 left: 16px;
                 z-index: 9;
 
-                &::before {
-                    content: "";
-                    position: absolute;
-                    top: -40px;
-                    left: 60px;
-                    border-style: solid;
-                    border-width: 20px 13px 20px 13px;
-                    border-color: transparent transparent rgba($color: #000000, $alpha: 0.8) transparent;
-                }
-
                 .navPage-subMenu-list {
                     width: 100%;
                     max-width: calc(100% - 200px);
                     padding-left: 40px;
-                    // display: flex;
-                    // flex-wrap: wrap;
                 }
 
                 .imageArea {
                     width: 100%;
                     max-width: 200px;
                 }
+            }
+
+            @media (min-width: 1800px) {
+                top: 130%;
             }
 
             .navPage-subMenu-list {
@@ -712,7 +724,8 @@
                                 flex-wrap: wrap;
 
                                 .navPage-subMenu-image {
-                                    width: 15%
+                                    width: 100%;
+                                    max-width: 32px;
                                 }
 
                                 > .navPage-subMenu-action {
@@ -832,16 +845,33 @@
         .custom-search-mobile {
             .navPages-quickSearch {
                 position: absolute;
-                bottom: -75px;
+                // bottom: -75px;
                 left: 0;
                 right: 0;
                 z-index: 1;
                 display: none;
+                top: 83px;
+
+                .quickSearchResults {
+                    max-height: 50vh;
+                    overflow: auto;
+                }
             }
 
             &.is-open {
                 .navPages-quickSearch {
                     display: block;
+                    background-color: #232323;
+
+                    .form-input {
+                        border-radius: 0;
+                        border: 1px solid #ff5100;
+                        color: #ff5100;
+
+                        &::placeholder {
+                            color: #ff5100;
+                        }
+                    }
                 }
             }
         }
