--- a/templates/components/common/navigation-list.html
+++ b/templates/components/common/navigation-list.html
@@ -1,5 +1,5 @@
 {{#if children}}
-<a class="navPages-action has-subMenu{{#if is_active}} activePage{{/if}} custom-animation" data-step-animate="{{@index}}"
+<a class="navPages-action has-subMenu has-subcategories{{#if is_active}} activePage{{/if}} custom-animation" data-step-animate="{{@index}}"
     href="{{url}}"
     data-collapsible="navPages-{{id}}"
 >
