--- a/templates/components/common/navigation.html
+++ b/templates/components/common/navigation.html
@@ -34,7 +34,12 @@
         <!-- Quote -->
         <a href="#" class="header-top__link flex-align-center navUser-item custom-animation" data-step-animate="3">
             <div class="header-top__icon">
-                <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-quote-icon.png" alt="Quote Icon">
+                <svg xmlns="http://www.w3.org/2000/svg" id="quote" width="13.333" height="15" viewBox="0 0 13.333 15">
+                    <path id="Path_84" data-name="Path 84" d="M9.167,10.833h2.154L9.167,12.988Zm-7.5-9.167h10v7.5H7.5v4.167H1.667ZM0,0V15H9.512l3.822-3.821V0Z" fill="#ff5100"/>
+                    <rect id="Rectangle_10" data-name="Rectangle 10" width="8" height="2" transform="translate(2.667 3.25)" fill="#ff5100"/>
+                    <rect id="Rectangle_11" data-name="Rectangle 11" width="8" height="2" transform="translate(2.667 6.5)" fill="#ff5100"/>
+                    <rect id="Rectangle_12" data-name="Rectangle 12" width="3" height="2" transform="translate(3.18 9.75)" fill="#ff5100"/>
+                </svg>
             </div>
             <span class="header-top__text">
                 My Quote
@@ -44,7 +49,16 @@
         <!-- Cart -->
         <li class="navUser-item navUser-item--cart header-top__link custom-animation" data-step-animate="4">
             <div class="header-top__icon">
-                <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-cart-icon.png" alt="cart Icon">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="Group_147" data-name="Group 147" width="14.468" height="15" viewBox="0 0 14.468 15">
+                    <defs>
+                      <clipPath id="clip-path">
+                        <rect id="Rectangle_9" data-name="Rectangle 9" width="14.468" height="15" fill="#ff5100"/>
+                      </clipPath>
+                    </defs>
+                    <g id="Group_146" data-name="Group 146" clip-path="url(#clip-path)">
+                      <path id="Path_83" data-name="Path 83" d="M11.053,10.263h-6.8l.264-.789h7.921l2.031-7.105H2.877L2.166,0H0V1.579H.992L3.119,8.672,2.56,10.349a2.385,2.385,0,1,0,2.821,1.493H8.829a2.342,2.342,0,0,0-.145.789,2.368,2.368,0,1,0,2.368-2.368m1.322-6.316L11.247,7.895H4.535L3.351,3.947ZM3.947,12.632a.789.789,0,1,1-.789-.789.79.79,0,0,1,.789.789m7.105.789a.789.789,0,1,1,.789-.789.79.79,0,0,1-.789.789" fill="#ff5100"/>
+                    </g>
+                </svg>
             </div>
             <a class="navUser-action header-top__text"
                data-cart-preview
@@ -63,7 +77,18 @@
         <!-- Wish List -->
         <a href="#" class="header-top__link navUser-item  flex-align-center custom-animation" data-step-animate="5">
             <div class="header-top__icon">
-                <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-heart-icon.png" alt="Wish List Icon">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="16.406" height="15" viewBox="0 0 16.406 15">
+                    <defs>
+                        <clipPath id="clip-path">
+                        <rect id="Rectangle_8" data-name="Rectangle 8" width="16.406" height="15" fill="#ff5100"/>
+                        </clipPath>
+                    </defs>
+                    <g id="Group_144" data-name="Group 144" transform="translate(0 0)">
+                        <g id="Group_143" data-name="Group 143" transform="translate(0 0)" clip-path="url(#clip-path)">
+                        <path id="Path_82" data-name="Path 82" d="M15,1.406a4.811,4.811,0,0,0-6.8,0,4.807,4.807,0,0,0-6.8,6.8L8.2,15,15,8.2a4.812,4.812,0,0,0,0-6.8M13.867,7.07,8.2,12.735,2.538,7.07A3.2,3.2,0,1,1,7.07,2.539a3.229,3.229,0,0,1,.452.585l.681,1.1.681-1.1a3.194,3.194,0,0,1,.452-.585,3.282,3.282,0,0,1,4.532,0,3.207,3.207,0,0,1,0,4.532" transform="translate(0 0)" fill="#ff5100"/>
+                        </g>
+                    </g>
+                </svg>
             </div>
             <span class="header-top__text">
                 Wish List
@@ -91,7 +116,19 @@
         <!-- Acount -->
         <li class="navUser-item navUser-item--account header-top__link custom-animation" data-step-animate="6">
             <div class="header-top__icon">
-                <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-account-icon.png" alt="Acount Icon">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="11.053" height="15" viewBox="0 0 11.053 15">
+                    <defs>
+                    <clipPath id="clip-path">
+                        <rect id="Rectangle_6" data-name="Rectangle 6" width="11.053" height="15" fill="#ff5100"/>
+                    </clipPath>
+                    </defs>
+                    <g id="Group_142" data-name="Group 142" transform="translate(-20)">
+                        <g id="Group_139" data-name="Group 139" transform="translate(20)" clip-path="url(#clip-path)">
+                        <path id="Path_80" data-name="Path 80" d="M7.105,11H3.947A3.952,3.952,0,0,0,0,14.947v2.368H11.053V14.947A3.952,3.952,0,0,0,7.105,11m2.368,4.737H1.579v-.789a2.371,2.371,0,0,1,2.368-2.368H7.105a2.371,2.371,0,0,1,2.368,2.368Z" transform="translate(0 -2.316)" fill="#ff5100"/>
+                        <path id="Path_81" data-name="Path 81" d="M5.947,7.895A3.947,3.947,0,1,0,2,3.947,3.952,3.952,0,0,0,5.947,7.895m0-6.316A2.368,2.368,0,1,1,3.579,3.947,2.371,2.371,0,0,1,5.947,1.579" transform="translate(-0.421)" fill="#ff5100"/>
+                        </g>
+                    </g>
+                </svg>
             </div>
             {{#if customer}}
                 <a class="navUser-action header-top__text"
