--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,3 +1,10 @@
+/* Grease Finder Button */
+.grease-finder-button {
+   img {
+    margin-left: 4px;
+   } 
+}
+
 /* Section Below Home Carousel */
 .custom-section-below-carousel {
     padding-top: 13px;
