--- a/templates/components/common/navigation-menu.html
+++ b/templates/components/common/navigation-menu.html
@@ -39,7 +39,10 @@
             {{/unless}}
         </ul>
 
-        <a href="#" class="btn btn-primary custom custom-animation header-middle-button" data-step-animate="1">GREASE FINDER</a>
+        <a href="#" class="btn btn-primary custom custom-animation header-middle-button grease-finder-button" data-step-animate="1">
+            GREASE FINDER
+            <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/grease-finder-sml.png" alt="Grease Finder">
+        </a>
     </div>
     
     <ul class="navPages-list navPages-list--user">
