--- a/templates/components/common/navigation.html
+++ b/templates/components/common/navigation.html
@@ -77,18 +77,7 @@
         <!-- Wish List -->
         <a href="#" class="header-top__link navUser-item  flex-align-center custom-animation" data-step-animate="5">
             <div class="header-top__icon">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="16.406" height="15" viewBox="0 0 16.406 15">
-                    <defs>
-                        <clipPath id="clip-path">
-                        <rect id="Rectangle_8" data-name="Rectangle 8" width="16.406" height="15" fill="#ff5100"/>
-                        </clipPath>
-                    </defs>
-                    <g id="Group_144" data-name="Group 144" transform="translate(0 0)">
-                        <g id="Group_143" data-name="Group 143" transform="translate(0 0)" clip-path="url(#clip-path)">
-                        <path id="Path_82" data-name="Path 82" d="M15,1.406a4.811,4.811,0,0,0-6.8,0,4.807,4.807,0,0,0-6.8,6.8L8.2,15,15,8.2a4.812,4.812,0,0,0,0-6.8M13.867,7.07,8.2,12.735,2.538,7.07A3.2,3.2,0,1,1,7.07,2.539a3.229,3.229,0,0,1,.452.585l.681,1.1.681-1.1a3.194,3.194,0,0,1,.452-.585,3.282,3.282,0,0,1,4.532,0,3.207,3.207,0,0,1,0,4.532" transform="translate(0 0)" fill="#ff5100"/>
-                        </g>
-                    </g>
-                </svg>
+                <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/heart.png" alt="Wish List Icon">
             </div>
             <span class="header-top__text">
                 Wish List
@@ -172,7 +161,7 @@
                aria-label="{{lang 'common.search'}}"
             >
                 <div class="header-top__icon">
-                    <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-search-icon.png" alt="Acount Icon">
+                    <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/search.png" alt="Search Icon">
                 </div>
             </button>
         </li>
