--- a/templates/components/custom/homepage/banner-with-text-1.html
+++ b/templates/components/custom/homepage/banner-with-text-1.html
@@ -4,22 +4,22 @@
             <div class="row">
                 <div class="col l-4 m-2 s-2 banner-with-text-item custom-animation" data-step-animate="1">
                     <a href="#" class="banner-with-text-link">
-                        <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/home-banner-with-text-image.png" alt="Banner With Text Image">
+                        <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/cat-banner1.jpg?" alt="Banner With Text Image">
                     </a>
                 </div>
                 <div class="col l-4 m-2 s-2 banner-with-text-item custom-animation" data-step-animate="2">
                     <a href="#" class="banner-with-text-link">
-                        <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/home-banner-with-text-image.png" alt="Banner With Text Image">
+                        <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/cat-banner2.jpg?" alt="Banner With Text Image">
                     </a>
                 </div>
                 <div class="col l-4 m-2 s-2 banner-with-text-item custom-animation" data-step-animate="3">
                     <a href="#" class="banner-with-text-link">
-                        <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/home-banner-with-text-image.png" alt="Banner With Text Image">
+                        <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/cat-banner3.jpg?" alt="Banner With Text Image">
                     </a>
                 </div>
                 <div class="col l-4 m-2 s-2 banner-with-text-item custom-animation" data-step-animate="4">
                     <a href="#" class="banner-with-text-link">
-                        <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/home-banner-with-text-image.png" alt="Banner With Text Image">
+                        <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/cat-banner4.jpg?" alt="Banner With Text Image">
                     </a>
                 </div>
             </div>
