--- a/templates/components/custom/homepage/home-blogs.html
+++ b/templates/components/custom/homepage/home-blogs.html
@@ -2,7 +2,7 @@
     <div class="container container-main">
         <div class="block-header">
             <h3 class="heading-h3 color-white text-center uppercase">TYGRIS ACADEMY</h3>
-            <p class="section-desc color-white text-center">
+            <p class="section-text-14 color-white text-center">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Ut enim ad .
             </p>
         </div>
@@ -25,7 +25,7 @@
                             <h3 class="title text-center">
                                 <a href="{{url}}" class="color-white fw-bold">{{title}}</a>
                             </h3>
-                            <div class="summary section-desc text-center fw-400">
+                            <div class="summary section-text-14 text-center fw-400">
                                 {{{ellipsis summary 87}}}
                             </div>
                         </div>
