--- a/templates/components/custom/homepage/home-testimonial.html
+++ b/templates/components/custom/homepage/home-testimonial.html
@@ -9,7 +9,7 @@
                 <div class="row">
                     <div class="col l-2 m-2 s-1 custom-animation" data-step-animate="1">
                         <div class="testimonial__item bg-main-2">
-                            <p class="color-white testimonial__desc section-desc">
+                            <p class="color-white testimonial__desc section-text-14">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing eiusmod tempor incididunt ut labore et dolore ut.
                             </p>
                             <div class="testimonial__review">
@@ -45,7 +45,7 @@
                     </div>
                     <div class="col l-2 m-2 s-1 custom-animation" data-step-animate="2">
                         <div class="testimonial__item bg-main-2">
-                            <p class="color-white testimonial__desc section-desc">
+                            <p class="color-white testimonial__desc section-text-14">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing eiusmod tempor incididunt ut labore et dolore ut.
                             </p>
                             <div class="testimonial__review">
