--- a/templates/pages/category.html
+++ b/templates/pages/category.html
@@ -34,10 +34,10 @@ category:
     {{{region name="category_below_header"}}}
 {{/unless}}
 
-<div class="container container-1446">
+<div class="container container-1424">
     {{> components/custom/category/custom-subCategory}}
     
-    <div class="page">
+    <div class="page custom-category-page">
         {{#if category.faceted_search_enabled}}
             <aside class="page-sidebar" id="faceted-search-container">
                 {{> components/category/sidebar}}
