--- a/assets/scss/components/stencil/category/_category.scss
+++ b/assets/scss/components/stencil/category/_category.scss
@@ -63,7 +63,7 @@
 .subCategories__list {
     margin-left: auto;
     margin-right: auto;
-    padding-top: 11px;
+    padding-top: 13px;
 
     @media (max-width: 767px) {
        max-width: 320px;
@@ -71,6 +71,8 @@
 
     .item {
         transition: all 0.3s ease-in-out;
+        padding-left: 18px;
+        padding-right: 18px;
 
         @media (max-width: 1600px) {
             padding-left: 18px;
@@ -88,9 +90,17 @@
         }
 
         .sub-category {
-            max-width: 125px;
+            max-width: 119px;
+
+            .image {
+                img {
+                    max-width: 76px;
+                    max-height: 84px;
+                }
+            }
 
             .content {
+                min-width: 119px;
                 .title {
                     font-size: 12px;
                     letter-spacing: 0.84px;
@@ -103,7 +113,7 @@
 
         + .item {
             @media (min-width: 1600px) {
-                margin-left: 35px;
+                // margin-left: 35px;
             }
         }
         
@@ -111,6 +121,142 @@
             transform: translateY(-8px);
             .title {
                 color: #ff5100
+            }
+        }
+    }
+}
+
+.page.custom-category-page {
+    margin: 0 -16px;
+    .page-sidebar {
+        padding-left: 16px;
+        padding-right: 16px;
+        
+        @media (min-width: 1025px) {
+            width: 21%;
+        }
+
+        .sidebarBlock {
+            .facetedSearch-toggle {
+                + .facetedSearch-navList {
+                    margin-top: 1.5rem;
+                }
+            }
+
+            .accordion {
+                border-radius: 0;
+            }
+
+            .accordion-block {
+                .accordion-navigation {
+                    padding-top: 20px;
+                    padding-bottom: 14px;
+                    border-radius: 0;
+                    border-bottom: 1px solid #707070;
+
+                    .accordion-title {
+                        font-weight: 600;
+                    }
+
+                    .filter-category-icon {
+                        position: relative;
+                        display: inline-block;
+                        width: 18px;
+                        height: 3px;
+                        background-color: #393939;
+
+                        &::before {
+                            content: "";
+                            position: absolute;
+                            top: 50%;
+                            left: 50%;
+                            transform: translate(-50%,-50%);
+                            width: 3px;
+                            height: 18px;
+                            background-color: inherit;
+                        }
+                        
+                    }
+                    &.is-open {
+                        .filter-category-icon::before {
+                            display: none;
+                        }
+                    }
+
+                }
+                .accordion-content {
+                    .navList {
+                        padding-top: 8px;
+                    }
+                    .navList-item {
+                        .navList-action {
+                            font-size: 13px;
+                            font-weight: 400;
+                            line-height: 1.538em;
+                            color: #232323;
+                            padding-left: 33px;
+
+                            &::before {
+                                width: 23px;
+                                height: 23px;
+                                border-radius: 0;
+                                border-color: #000000;
+                                margin-top: -0.9rem;
+                            }
+
+                            &::after {
+                                width: 23px;
+                                height: 23px;
+                                margin-top: -0.9rem;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        
+
+        .custom-category-banner {
+            padding-top: 19px;
+
+            .category-cms-banner + .category-cms-banner {
+                margin-top: 28px;
+            }
+        }
+    }
+
+    .page-content {
+        padding-left: 16px;
+        padding-right: 16px;
+        @media (min-width: 1025px) {
+            width: 79%;
+        }
+    }
+
+    /* Filter Sidebar Mobile */
+    @media (max-width: 1024px) {
+        .filter-mobile-wrapper {
+            .filter-mobile-left {
+
+            }
+
+            .filter-mobile-right {
+                
+            }
+        }
+        .custom-filter-button-mobile {
+            display: inline-flex;
+            align-items: center;
+            text-decoration: none;
+            border: none;
+            padding-left: 5px;
+
+            span {
+                font-weight: 600;
+                font-size: 12px;
+                color: #2e2e22;
+                letter-spacing: 0px;
+                line-height: 1.5em;
             }
         }
     }
