--- a/assets/scss/default.scss
+++ b/assets/scss/default.scss
@@ -6,9 +6,14 @@ body {
     }
 }
 
+body:not(.page-type-default){   
+    .body {
+        margin-top: 0;
+    }
+}
+
 .body {
     margin-bottom: 0;
-    margin-top: 0;
 }
 
 .skip-to-main-link {
@@ -43,6 +48,10 @@ body {
 
     &.container-1446 {
         max-width: 1446px;
+    }
+
+    &.container-1424 {
+        max-width: 1424px;
     }
 }
 
@@ -297,7 +306,7 @@ h1, h2, h3, h4, h5, h6 {
 
 }
 
-.section-desc {
+.section-text-14 {
     font-size: 14px;
     letter-spacing: 0;
     line-height: 1.5em;
@@ -403,7 +412,6 @@ h1, h2, h3, h4, h5, h6 {
     
         &:hover {
             color: stencilColor("button--primary-colorHover");
-            border: 1px solid stencilColor("button--primary-backgroundColorHover");
         }
     }
 
@@ -511,3 +519,4 @@ h1, h2, h3, h4, h5, h6 {
     transform: translatey(0);
     opacity: 1;
 }
+
