--- a/templates/components/common/body.html
+++ b/templates/components/common/body.html
@@ -5,4 +5,6 @@
 
     {{> components/common/modal/modal}}
     {{> components/common/alert/alert-modal}}
+
+    {{> components/custom/global/custom-left-sidebar}}
 </main>
