--- a/templates/components/custom/homepage/banner-below-carousel.html
+++ b/templates/components/custom/homepage/banner-below-carousel.html
@@ -3,7 +3,7 @@
         <div class="section-below-carouse__wrapper flex-between">
             <h3 class="heading-h3 title">GREASE FINDER</h3>
             <span class="separate"></span>
-            <p class="desc section-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Ut enim ad .</p>
+            <p class="desc section-text-14">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Ut enim ad .</p>
             <a href="#" class="btn btn-large btn-primary grease-finder-button">
                 Grease Finder
                 <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/grease-finder-sml.png" alt="Grease Finder">
