--- a/templates/components/faceted-search/faceted-search-navigation.html
+++ b/templates/components/faceted-search/faceted-search-navigation.html
@@ -4,17 +4,12 @@
          data-collapsible="#facetedSearch-content--{{dashcase facet}}"
          aria-label="{{lang 'search.faceted.toggleSection' title=title}}"
     >
-        <span class="accordion-title">
+        <span class="accordion-title section-text-14 fw-600">
             {{title}}
         </span>
 
         <span>
-            <svg class="icon accordion-indicator toggleLink-text toggleLink-text--off">
-                <use href="#icon-add" />
-            </svg>
-            <svg class="icon accordion-indicator toggleLink-text toggleLink-text--on">
-                <use href="#icon-remove" />
-            </svg>
+            <span class="icon accordion-indicator toggleLink-text toggleLink-text--on filter-category-icon"></span>
         </span>
     </button>
     {{#if selected}}
