--- a/templates/components/products/grid.html
+++ b/templates/components/products/grid.html
@@ -1,4 +1,4 @@
-<ul class="productGrid">
+<ul class="productListing {{#if theme_settings.product_list_display_mode '===' 'grid'}} productGrid{{else}} productList{{/if}}">
     {{#each products}}
     <li class="product">
             {{>components/products/card settings=../settings show_compare=../show_compare show_rating=../settings.show_product_rating theme_settings=../theme_settings customer=../customer event=../event position=(add @index 1)}}
