--- a/templates/pages/category.html
+++ b/templates/pages/category.html
@@ -37,7 +37,7 @@ category:
 <div class="container container-1424">
     {{> components/custom/category/custom-subCategory}}
     
-    <div class="page custom-category-page">
+    <div id="grid-list-layout" class="page custom-category-page">
         {{#if category.faceted_search_enabled}}
             <aside class="page-sidebar" id="faceted-search-container">
                 {{> components/category/sidebar}}
