--- a/assets/scss/default.scss
+++ b/assets/scss/default.scss
@@ -147,6 +147,12 @@ h1, h2, h3, h4, h5, h6 {
     text-transform: unset;
 }
 
+input,
+.button {
+    border-radius: 0 !important;
+}
+
+
 .uppercase {
     text-transform: uppercase;
 }
