--- a/templates/components/custom/gallery/custom-view-as.html
+++ b/templates/components/custom/gallery/custom-view-as.html
@@ -3,10 +3,10 @@
         <label class="form-label">View As:</label>
         <div class="view-as-btn">
             <a href="javascript:void(0);" id="list-view" data-layout="productGrid--maxCol1" title="List View"></a>
-            <a href="javascript:void(0);" id="grid-view-2" data-layout="productGrid--maxCol2" title="Grid View 2"></a>
             <a href="javascript:void(0);" id="grid-view-3" data-layout="productGrid--maxCol3" title="Grid View 3"></a>
-            <a href="javascript:void(0);" id="grid-view-4" data-layout="productGrid--maxCol4" title="Grid View 4"></a>
-            <a href="javascript:void(0);" id="grid-view-5" data-layout="productGrid--maxCol5" title="Grid View 5"></a>
+            <!-- <a href="javascript:void(0);" id="grid-view-4" data-layout="productGrid--maxCol4" title="Grid View 4"></a> -->
+            <!-- <a href="javascript:void(0);" id="grid-view-5" data-layout="productGrid--maxCol5" title="Grid View 5"></a> -->
+            <a href="javascript:void(0);" id="grid-view-5" data-layout="productGrid--maxCol4" title="Grid View 4"></a>
         </div>
     </div>
 </div>
