--- a/templates/components/faceted-search/facets/range.html
+++ b/templates/components/faceted-search/facets/range.html
@@ -34,7 +34,7 @@
                     </div>
 
                     <div class="form-field">
-                        <button class="button button--small" type="submit">
+                        <button class="btn btn-primary" type="submit">
                             {{lang 'search.faceted.range.update'}}
                         </button>
                     </div>
