--- a/templates/components/products/card.html
+++ b/templates/components/products/card.html
@@ -79,29 +79,11 @@
             <div class="card-figcaption-body">
                 {{#unless hide_product_quick_view}}
                     {{#if theme_settings.show_product_quick_view}}
-                        <button type="button" class="button button--small card-figcaption-button quickview" data-event-type="product-click" data-product-id="{{id}}">{{lang 'products.quick_view'}}</button>
+                        <button type="button" class="button button--small card-figcaption-button quickview" data-event-type="product-click" data-product-id="{{id}}">
+                            <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/quick-view.png" alt="Quick View Icon" class="quickView-image">
+                        </button>
                     {{/if}}
                 {{/unless}}
-                {{#if show_compare}}
-                    <label class="button button--small card-figcaption-button" for="compare-{{id}}">
-                        {{lang 'products.compare'}} <input type="checkbox" name="products[]" value="{{id}}" id="compare-{{id}}" data-compare-id="{{id}}">
-                    </label>
-                {{/if}}
-                {{#if show_cart_action}}
-                    {{#if has_options}}
-                        <a href="{{url}}" data-event-type="product-click" class="button button--small card-figcaption-button" data-product-id="{{id}}">{{lang 'products.choose_options'}}</a>
-                    {{/if}}
-                    {{#if pre_order}}
-                        <a href="{{pre_order_add_to_cart_url}}" data-event-type="product-click" class="button button--small card-figcaption-button">{{lang 'products.pre_order'}}</a>
-                    {{/if}}
-                    {{#if add_to_cart_url }}
-                        <a href="{{add_to_cart_url}}" data-event-type="product-click" data-button-type="add-cart" class="button button--small card-figcaption-button">{{lang 'products.add_to_cart'}}</a>
-                        <span class="product-status-message aria-description--hidden">{{lang 'category.add_cart_announcement'}}</span>
-                    {{/if}}
-                    {{#if out_of_stock_message }}
-                        <a href="{{url}}" data-event-type="product-click" class="button button--small card-figcaption-button" data-product-id="{{id}}">{{out_of_stock_message}}</a>
-                    {{/if}}
-                {{/if}}
             </div>
         </figcaption>
     </figure>
@@ -133,5 +115,21 @@
             {{/or}}
         </div>
         {{> components/products/bulk-discount-rates}}
+
+        {{#if show_cart_action}}
+            {{#if has_options}}
+                <a href="{{url}}" data-event-type="product-click" class="btn btn-secondary uppercase button--small card-figcaption-button" data-product-id="{{id}}">{{lang 'products.choose_options'}}</a>
+            {{/if}}
+            {{#if pre_order}}
+                <a href="{{pre_order_add_to_cart_url}}" data-event-type="product-click" class="btn btn-secondary uppercase button--small card-figcaption-button">{{lang 'products.pre_order'}}</a>
+            {{/if}}
+            {{#if add_to_cart_url }}
+                <a href="{{add_to_cart_url}}" data-event-type="product-click" data-button-type="add-cart" class="btn btn-secondary uppercase button--small card-figcaption-button">{{lang 'products.add_to_cart'}}</a>
+                <span class="product-status-message aria-description--hidden">{{lang 'category.add_cart_announcement'}}</span>
+            {{/if}}
+            {{#if out_of_stock_message }}
+                <a href="{{url}}" data-event-type="product-click" class="btn btn-secondary uppercase button--small card-figcaption-button" data-product-id="{{id}}">{{out_of_stock_message}}</a>
+            {{/if}}
+        {{/if}}
     </div>
 </article>
