--- a/templates/components/common/paginator.html
+++ b/templates/components/common/paginator.html
@@ -1,4 +1,4 @@
-<nav class="pagination" aria-label="pagination">
+<nav class="pagination custom-pagination" aria-label="pagination">
     <ul class="pagination-list">
         {{#if previous}}
             <li class="pagination-item pagination-item--previous">
