--- a/templates/pages/category.html
+++ b/templates/pages/category.html
@@ -58,6 +58,13 @@ category:
             {{> components/category/product-listing}}
             {{{region name="category_below_content"}}}
         </div>
+
+        <!-- Show More Product -->
+        <div class="custom-product-show-more" id="listing-showmoreBtn">
+            <a class="btn btn-secondary uppercase" href="#">
+                <span class="text">{{lang 'search.faceted.show-more'}}</span>
+            </a>
+        </div> 
     </div>
 </div>
 
